-fixed unit test